# layout

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  ui.xml
src/: main.cpp  main1.cpp
src/layout_engine/: Engine.cpp  Engine.hpp  UIConverter.cpp  UIConverter.hpp
src/layout_engine/layouts/: Flow.cpp  Flow.hpp
src/layout_engine/shapes/: Circle.hpp  Node.cpp  Node.hpp  Shape.cpp  Shape.hpp
